[package]
name = "three-way-merge-finder"
version = "0.2.0"
authors = ["Ward Muylaert <ward.muylaert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
clap = "2"
regex = "1.4.1"
lazy_static = "1.4.0"
