[package]
name = "three-way-merge-finder"
version = "0.4.0"
authors = ["Ward Muylaert <ward.muylaert@gmail.com>"]
description = "Tool to find merges in a Git repository"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.16"
clap = { version = "4.1", features = ["cargo", "derive", "wrap_help"] }
regex = "1.7"
lazy_static = "1.4"
